--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,28 @@
 .App {
   text-align: center;
 }
+
+.nav {
+  display: flex;
+  justify-content: space-around;
+  background-color: rgb(30, 34, 33);
+  color: aliceblue;
+  align-items: center;
+  max-height: 60px;
+}
+
+.nav-links {
+  width: 50%;
+  display: flex;
+  justify-content: space-around;
+  align-self: center;
+  text-decoration: none;
+  list-style: none; /*removes dots*/
+}
+
+.content {
+  padding: 50px 80px 50px 80px;
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-gap: 48px;
+}
