--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,28 @@
+@font-face {
+  font-family: "Helvetica Neue Cyr Roman";
+  src: url("./assets/HelveticaNeueCyr-Roman.eot");
+  src: url("./assets/HelveticaNeueCyr-Roman.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/HelveticaNeueCyr-Roman.woff") format("woff"),
+    url("./assets/HelveticaNeueCyr-Roman.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Helvetica Neue Cyr Medium";
+  src: url("./assets/HelveticaNeueCyr-Medium.eot");
+  src: url("./assets/HelveticaNeueCyr-Medium.eot?#iefix")
+      format("embedded-opentype"),
+    url("./assets/HelveticaNeueCyr-Medium.woff") format("woff"),
+    url("./assets/HelveticaNeueCyr-Medium.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 .App {
   text-align: center;
+  font-family: "Helvetica Neue Cyr Roman", Liberation Sans, Arial, sans-serif;
 }
 
 .nav {
@@ -9,6 +32,7 @@
   color: aliceblue;
   align-items: center;
   max-height: 60px;
+  margin-bottom: 48px;
 }
 
 .nav-links {
@@ -21,8 +45,27 @@
 }
 
 .content {
-  padding: 50px 80px 50px 80px;
+  padding: 0px 80px 50px 80px;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
   grid-gap: 48px;
+}
+
+.details {
+  display: flex;
+  justify-content: left;
+  padding: 0px 80px 50px 80px;
+}
+
+.text {
+  left: auto;
+  margin-left: 80px;
+}
+
+.title {
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  vertical-align: top;
+  font-size: 60px;
+  font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
 }
