--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,6 @@
 }
 
 .App {
-  text-align: center;
   font-family: "Helvetica Neue Cyr Roman", Liberation Sans, Arial, sans-serif;
 }
 
@@ -64,8 +63,23 @@
 
 .title {
   margin-block-start: 0em;
-  margin-block-end: 0em;
+  margin-block-end: 50px;
   vertical-align: top;
   font-size: 60px;
   font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
+  line-height: 47px;
+}
+
+.overview {
+  margin-block-start: 0em;
+  margin-block-end: 50px;
+}
+
+th {
+  text-align: left;
+  padding: 0px 25px 30px 0px;
+}
+
+td {
+  vertical-align: baseline;
 }
