--- a/src/App.css
+++ b/src/App.css
@@ -65,14 +65,15 @@
   justify-content: space-between;
   left: auto;
   margin-left: 80px;
+  max-width: 820px;
 }
 
 .title {
   margin-block-start: 0em;
+  margin-block-end: 0em;
   vertical-align: top;
-  font-size: 60px;
+  font-size: 50px;
   font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
-  line-height: 47px;
 }
 
 .overview {
@@ -90,6 +91,7 @@ td {
 
 img {
   box-shadow: 0px 3px 8px 2px rgba(0, 0, 0, 0.397);
+  border-radius: 2px;
 }
 
 .similar {
