--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,7 @@ button {
   left: 50%;
 }
 
-.overlay:hover {
+.movie:hover > .overlay {
   filter: brightness(40%);
   -webkit-filter: brightness(40%);
   -webkit-transition: all 0.6s ease;
