--- a/src/App.css
+++ b/src/App.css
@@ -190,18 +190,19 @@ button {
 }
 
 .back-btn {
+  display: flex;
   text-decoration: none;
-  color: #f54c4c;
-  font-size: 60px;
+  color: whitesmoke;
+  font-size: 21px;
   font-weight: bold;
-  font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
+  font-family: "Helvetica Neue Cyr Roman", Liberation Sans, Arial, sans-serif;
   text-shadow: 0px 3px 8px rgba(0, 0, 0, 0.397);
 }
 
-.test {
+.back-btn-container {
   position: absolute;
-  top: 85px;
-  left: -80px;
+  top: 18px;
+  left: -70px;
 }
 
 .overview {
@@ -258,4 +259,15 @@ button {
 .search:focus {
   outline: none;
   box-shadow: inset 0 0 0 2px #aaaaaa;
+}
+
+.favorites {
+  padding: 0px 80px 50px 80px;
+}
+
+.favorites-header {
+  margin-block-start: 0px;
+  margin-block-end: 48px;
+  font-size: 50px;
+  font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
 }
