--- a/src/App.css
+++ b/src/App.css
@@ -35,19 +35,20 @@ body {
 
 .nav {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   background: #2e2e2e;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
   color: aliceblue;
   align-items: center;
   max-height: 60px;
   margin-bottom: 48px;
+  padding: 0px 110px 0px 150px;
 }
 
 .nav-links {
   width: 50%;
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
   align-self: center;
   text-decoration: none;
   list-style: none; /*removes dots*/
@@ -211,7 +212,9 @@ button {
   align-items: center;
 }
 
-.search-icon {
+.search-icon,
+.favorites-btn,
+.about-btn {
   margin: 0px 6px 0px 6px;
 }
 
@@ -270,4 +273,12 @@ button {
   margin-block-end: 48px;
   font-size: 50px;
   font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
+}
+
+.badge-style {
+  background-color: #f54c4c !important;
+  height: 15px !important;
+  width: 15px !important;
+  min-width: 15px !important;
+  font-size: 0.7rem !important;
 }
