--- a/src/App.scss
+++ b/src/App.scss
@@ -118,16 +118,23 @@ body {
   max-width: 820px;
 }
 
+.parallax {
+  display: flex;
+}
+
 .movie-title {
+  left: 28%; //kinda hack, idc
   margin-block-start: 0em;
   margin-block-end: 0em;
   vertical-align: top;
   font-size: 50px;
+  text-shadow: 0px 6px 10px rgba(34, 60, 80, 0.28);
   font-family: "Helvetica Neue Cyr Medium", Liberation Sans, Arial, sans-serif;
+  position: absolute;
 }
 
 .description {
-  margin-block-start: 0em;
+  margin-block-start: 10%;
 }
 
 th {
