--- a/src/App.scss
+++ b/src/App.scss
@@ -123,7 +123,7 @@ body {
 }
 
 .movie-title {
-  left: 28%; //kinda hack, idc
+  left: 28%; //kinda hack, idk
   margin-block-start: 0em;
   margin-block-end: 0em;
   vertical-align: top;
