--- a/src/App.scss
+++ b/src/App.scss
@@ -334,10 +334,12 @@ button {
   flex-direction: column;
   h1 {
     margin: 0;
-    font-size: 5rem;
+    max-width: 10em;
+    text-align: center;
+    font-size: 5em;
   }
   p {
-    font-size: 1.2rem;
+    font-size: 1.2em;
   }
 }
 
